<resources>
    <string name="app_name">RickyAndMorty</string>
    <string name="menu_characters">Персонажи</string>
    <string name="menu_locations">Локации</string>
    <string name="menu_episodes">Эпизоды</string>
    <string name="input_character_find">Поиск</string>
    <string name="name_example">Example</string>
    <string name="alive">Живой</string>
    <string name="type">Вид:</string>
    <string name="type_2">Тип:</string>
    <string name="gender">Пол:</string>
    <string name="location">Местоположение</string>
    <string name="earth">Земля</string>
    <string name="man">мужской</string>
    <string name="human">человек</string>
    <string name="name_hero">Имя персонажа:</string>
    <string name="status">Статус:</string>
    <string name="man_ex2">Мужской</string>
    <string name="empty">TextView</string>
    <string name="alive_ex">Alive</string>
    <string name="dead_ex">Dead</string>
    <string name="origin">Происхождение</string>
    <string name="tv_ex">TextView</string>
    <string name="error_parameters">Параметры  не были заданы</string>
    <string name="filter">Фильтр</string>
    <string name="apply">Применить</string>
    <string name="status_unknow">Unknown</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>
    <string name="unknown">Unknown</string>
    <string name="dimension">Измерение:</string>
    <string name="episode">Номер эпизода:</string>
    <string name="air_date">Дата релиза:</string>
    <string name="human_eng">Human</string>
    <string name="alien_eng">Alien</string>
    <string name="humanoid_eng">Humanoid</string>
    <string name="robot_eng">Robot</string>
    <string name="poopybutthole_eng">Poopybutthole</string>
    <string name="mythological_eng">Mythological</string>
    <string name="animal_eng">Animal</string>
    <string name="cronenberg_eng">Cronenberg</string>
    <string name="disease_eng">Disease</string>
    <string name="species">Вид</string>
    <string name="season">Сезон</string>
    <string name="Reset">Сброс</string>
    <string name="ex_location">Название локации</string>
    <string name="error_connect">Отсутствует интернет-соединение</string>
    <string name="item_not_find">Данные не найдены</string>
</resources>