<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_item"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewCharacterDetail"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:paddingBottom="100dp"
        android:background="@drawable/view_detail_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@id/ivIconDetailCharacter"
        app:layout_constraintBottom_toTopOf="@id/tvNameDetailCharacter"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivIconDetailCharacter"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />
    <TextView
        android:id="@+id/tvNameDetailCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_example"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@id/ivIconDetailCharacter"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivIconDetailCharacter"
        app:layout_constraintTop_toBottomOf="@+id/tvNameDetailCharacter" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gender"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvSpeciesDetailCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center|start"
        android:text="@string/human"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvGenderDetailCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center|start"
        android:text="@string/name_example"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/origin"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ivIconDetailCharacter"
        app:layout_constraintTop_toBottomOf="@+id/ivIconDetailCharacter" />

    <TextView
        android:id="@+id/tvOriginDetailCharacter"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:gravity="top|start"
        android:text="@string/earth"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvLocationDetailCharacter"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:gravity="top|start"
        android:text="@string/tv_ex"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/ivIconDetailCharacter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDetailCharacterEpisodes"
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:paddingTop="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewCharacterDetail"
        app:layout_constraintVertical_bias="0.495" />

</androidx.constraintlayout.widget.ConstraintLayout>